--- a/.github/workflows/issue-recorder.yml
+++ b/.github/workflows/issue-recorder.yml
@@ -49,8 +49,9 @@ jobs:
           with_date: true
           timezone: Asia/Tokyo
           time_format: h:mm a · MMM d, yyyy (ZZZZ)
-          with_header: "# ${{ env.TITLE }}"
+          with_header: ""
           with_title: true
+          custom_title: "# ${{ env.TITLE }}"
           # with_quote: issue
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
