--- a/.github/workflows/issue-recorder.yml
+++ b/.github/workflows/issue-recorder.yml
@@ -51,7 +51,7 @@ jobs:
           time_format: h:mm a · MMM d, yyyy (ZZZZ)
           with_header: ""
           with_title: true
-          custom_title: "# ${{ env.TITLE }}"
+          custom_title: ${{ env.TITLE }}
           # with_quote: issue
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
