--- a/.github/workflows/issue-recorder.yml
+++ b/.github/workflows/issue-recorder.yml
@@ -35,7 +35,7 @@ jobs:
           mode: "file, issue"
           # filepath: _posts/${{ env.YEAR }}/${{ env.MONTH }}/${{ github.event.issue.title }}-.md
           # filepath: "issues/${{ github.event.issue.number }}_${{ github.event.issue.title }}.md"
-          filepath: ${{ env.CATEGORY }}/${{ env.YEAR }}/${{ env.MONTH }}/${{ env.DATE }}-.md
+          # filepath: ${{ env.CATEGORY }}/${{ env.YEAR }}/${{ env.MONTH }}/${{ env.DATE }}-.md
           committer_name: Kosuke Aoki
           committer_email: mail@noraworld.com
           overwrite_when_modified: true
@@ -53,6 +53,7 @@ jobs:
           with_title: true
           custom_title: ${{ env.TITLE }}
           # with_quote: issue
+          skip_body: "file, issue"
           # personal_access_token: GH_TOKEN
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
