Disable skip_body

--- a/.github/workflows/issue-recorder.yml
+++ b/.github/workflows/issue-recorder.yml
@@ -53,7 +53,7 @@ jobs:
           with_title: true
           custom_title: ${{ env.TITLE }}
           # with_quote: issue
-          skip_body: "file, issue"
+          # skip_body: "file, issue"
           # personal_access_token: GH_TOKEN
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
