--- a/.github/workflows/issue-recorder.yml
+++ b/.github/workflows/issue-recorder.yml
@@ -3,10 +3,11 @@ name: Issue Recorder
 on:
   issues:
     types:
-      - closed
+      - labeled
 
 jobs:
   build:
+    if: github.event.issue.state == 'open' && github.event.label.name == 'done'
     runs-on: ubuntu-latest
     steps:
       # "2024-03-05_sleep_睡眠記録" => "2024"
@@ -35,7 +36,7 @@ jobs:
           mode: "file, issue"
           # filepath: _posts/${{ env.YEAR }}/${{ env.MONTH }}/${{ github.event.issue.title }}-.md
           # filepath: "issues/${{ github.event.issue.number }}_${{ github.event.issue.title }}.md"
-          # filepath: ${{ env.CATEGORY }}/${{ env.YEAR }}/${{ env.MONTH }}/${{ env.DATE }}-.md
+          filepath: ${{ env.CATEGORY }}/${{ env.YEAR }}/${{ env.MONTH }}/${{ env.DATE }}-.md
           committer_name: Kosuke Aoki
           committer_email: mail@noraworld.com
           overwrite_when_modified: true
@@ -55,5 +56,19 @@ jobs:
           # with_quote: issue
           # skip_body: "file, issue"
           # personal_access_token: GH_TOKEN
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+
+      - name: Make sure the issue is saved successfully
+        run: |
+          file_content_length=$(gh api "repos/noraworld/github-actions-sandbox/contents/${{ env.CATEGORY }}/${{ env.YEAR }}/${{ env.MONTH }}/${{ env.DATE }}-.md" --jq '.content' | base64 --decode | wc -l)
+          issue_content_length$(gh issue view ${{ github.event.issue.id }} --json comments --jq '.comments.[].body' | wc -l)
+
+          if [ "$file_content_length" -gt "$issue_content_length" ]; then
+            gh issue close ${{ github.event.issue.id }}
+          else
+            gh issue edit ${{ github.event.issue.id }} --remove-label 'done'
+          fi
+        shell: sh
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
