--- a/.github/workflows/issue-recorder.yml
+++ b/.github/workflows/issue-recorder.yml
@@ -62,12 +62,12 @@ jobs:
       - name: Make sure the issue is saved successfully
         run: |
           file_content_length=$(gh api "repos/noraworld/github-actions-sandbox/contents/${{ env.CATEGORY }}/${{ env.YEAR }}/${{ env.MONTH }}/${{ env.DATE }}-.md" --jq '.content' | base64 --decode | wc -l)
-          issue_content_length=$(gh issue view "$ISSUE_NUMBER" --json comments --jq '.comments.[].body' | wc -l)
+          issue_content_length=$(gh issue view "${{ github.event.issue.number }}" --json comments --jq '.comments.[].body' | wc -l)
 
           if [ "$file_content_length" -gt "$issue_content_length" ]; then
-            gh issue close "$ISSUE_NUMBER"
+            gh issue close "${{ github.event.issue.number }}"
           else
-            gh issue edit "$ISSUE_NUMBER" --remove-label 'done'
+            gh issue edit "${{ github.event.issue.number }}" --remove-label 'done'
           fi
         shell: sh
         env:
