--- a/.github/workflows/issue-recorder.yml
+++ b/.github/workflows/issue-recorder.yml
@@ -64,7 +64,7 @@ jobs:
           file_content_length=$(gh api "repos/noraworld/github-actions-sandbox/contents/${{ env.CATEGORY }}/${{ env.YEAR }}/${{ env.MONTH }}/${{ env.DATE }}-.md" --jq '.content' | base64 --decode | wc -l)
           issue_content_length=$(gh issue view "${{ github.event.issue.number }}" --json comments --jq '.comments.[].body' | wc -l)
 
-          if [ "$file_content_length" -gt "$issue_content_length" ]; then
+          if [ "$file_content_length" -ge "$issue_content_length" ]; then
             gh issue close "${{ github.event.issue.number }}"
           else
             gh issue edit "${{ github.event.issue.number }}" --remove-label 'done'
