--- a/.github/workflows/issue-recorder.yml
+++ b/.github/workflows/issue-recorder.yml
@@ -1,74 +1,74 @@
-# name: Issue Recorder
+name: Issue Recorder
 
-# on:
-#   issues:
-#     types:
-#       - labeled
+on:
+  issues:
+    types:
+      - labeled
 
-# jobs:
-#   build:
-#     if: github.event.issue.state == 'open' && github.event.label.name == 'done'
-#     runs-on: ubuntu-latest
-#     steps:
-#       # "2024-03-05_sleep_睡眠記録" => "2024"
-#       - name: Get a year
-#         run: echo "YEAR=$(cut -d '-' -f1 <<< "${{ github.event.issue.title }}")" >> $GITHUB_ENV
+jobs:
+  build:
+    if: github.event.issue.state == 'open' && github.event.label.name == 'done'
+    runs-on: ubuntu-latest
+    steps:
+      # "2024-03-05_sleep_睡眠記録" => "2024"
+      - name: Get a year
+        run: echo "YEAR=$(cut -d '-' -f1 <<< "${{ github.event.issue.title }}")" >> $GITHUB_ENV
 
-#       # "2024-03-05_sleep_睡眠記録" => "03"
-#       - name: Get a month
-#         run: echo "MONTH=$(cut -d '-' -f2 <<< "${{ github.event.issue.title }}")" >> $GITHUB_ENV
+      # "2024-03-05_sleep_睡眠記録" => "03"
+      - name: Get a month
+        run: echo "MONTH=$(cut -d '-' -f2 <<< "${{ github.event.issue.title }}")" >> $GITHUB_ENV
 
-#       # "2024-03-05_sleep_睡眠記録" => "2024-03-05"
-#       - name: Get a date
-#         run: echo "DATE=$(cut -d '_' -f1 <<< "${{ github.event.issue.title }}")" >> $GITHUB_ENV
+      # "2024-03-05_sleep_睡眠記録" => "2024-03-05"
+      - name: Get a date
+        run: echo "DATE=$(cut -d '_' -f1 <<< "${{ github.event.issue.title }}")" >> $GITHUB_ENV
 
-#       # "2024-03-05_sleep_睡眠記録" => "sleep"
-#       - name: Get a category
-#         run: echo "CATEGORY=$(cut -d '_' -f2 <<< "${{ github.event.issue.title }}")" >> $GITHUB_ENV
+      # "2024-03-05_sleep_睡眠記録" => "sleep"
+      - name: Get a category
+        run: echo "CATEGORY=$(cut -d '_' -f2 <<< "${{ github.event.issue.title }}")" >> $GITHUB_ENV
 
-#       # "2024-03-05_sleep_睡眠記録" => "睡眠記録"
-#       - name: Get a title
-#         run: echo "TITLE=$(cut -d '_' -f3 <<< "${{ github.event.issue.title }}")" >> $GITHUB_ENV
+      # "2024-03-05_sleep_睡眠記録" => "睡眠記録"
+      - name: Get a title
+        run: echo "TITLE=$(cut -d '_' -f3 <<< "${{ github.event.issue.title }}")" >> $GITHUB_ENV
 
-#       - name: This is a test for Issue Recorder
-#         uses: noraworld/github-actions-sandbox@main
-#         with:
-#           mode: "file, issue"
-#           # filepath: _posts/${{ env.YEAR }}/${{ env.MONTH }}/${{ github.event.issue.title }}-.md
-#           # filepath: "issues/${{ github.event.issue.number }}_${{ github.event.issue.title }}.md"
-#           filepath: ${{ env.CATEGORY }}/${{ env.YEAR }}/${{ env.MONTH }}/${{ env.DATE }}-.md
-#           committer_name: Kosuke Aoki
-#           committer_email: mail@noraworld.com
-#           overwrite_when_modified: true
-#           extra_text_when_modified: "# issue からこんにちはです"
-#           notification_comment: このタスクの内容は [`<FILE_PATH>`](<FILE_URL>) に保存されました。
-#           # target_file_repo: noraworld/diary
-#           # target_issue_repo: noraworld/diary
-#           # target_issue_number: latest
-#           fold_threshold: 0
-#           fold_summary: ここをクリックすると展開できます
-#           with_date: true
-#           timezone: Asia/Tokyo
-#           time_format: h:mm a · MMM d, yyyy (ZZZZ)
-#           with_header: ""
-#           with_title: true
-#           custom_title: ${{ env.TITLE }}
-#           # with_quote: issue
-#           # skip_body: "file, issue"
-#           # personal_access_token: GH_TOKEN
-#         env:
-#           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+      - name: This is a test for Issue Recorder
+        uses: noraworld/github-actions-sandbox@main
+        with:
+          mode: "file, issue"
+          # filepath: _posts/${{ env.YEAR }}/${{ env.MONTH }}/${{ github.event.issue.title }}-.md
+          # filepath: "issues/${{ github.event.issue.number }}_${{ github.event.issue.title }}.md"
+          filepath: ${{ env.CATEGORY }}/${{ env.YEAR }}/${{ env.MONTH }}/${{ env.DATE }}-.md
+          committer_name: Kosuke Aoki
+          committer_email: mail@noraworld.com
+          overwrite_when_modified: true
+          extra_text_when_modified: "# issue からこんにちはです"
+          notification_comment: このタスクの内容は [`<FILE_PATH>`](<FILE_URL>) に保存されました。
+          # target_file_repo: noraworld/diary
+          # target_issue_repo: noraworld/diary
+          # target_issue_number: latest
+          fold_threshold: 0
+          fold_summary: ここをクリックすると展開できます
+          with_date: true
+          timezone: Asia/Tokyo
+          time_format: h:mm a · MMM d, yyyy (ZZZZ)
+          with_header: ""
+          with_title: true
+          custom_title: ${{ env.TITLE }}
+          # with_quote: issue
+          # skip_body: "file, issue"
+          # personal_access_token: GH_TOKEN
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
-#       - name: Make sure the issue is saved successfully
-#         run: |
-#           file_content_length=$(gh api "repos/noraworld/github-actions-sandbox/contents/${{ env.CATEGORY }}/${{ env.YEAR }}/${{ env.MONTH }}/${{ env.DATE }}-.md" --jq '.content' | base64 --decode | wc -l)
-#           issue_content_length=$(gh issue view "${{ github.event.issue.number }}" --json comments --jq '.comments.[].body' | wc -l)
+      - name: Make sure the issue is saved successfully
+        run: |
+          file_content_length=$(gh api "repos/noraworld/github-actions-sandbox/contents/${{ env.CATEGORY }}/${{ env.YEAR }}/${{ env.MONTH }}/${{ env.DATE }}-.md" --jq '.content' | base64 --decode | wc -l)
+          issue_content_length=$(gh issue view "${{ github.event.issue.number }}" --json comments --jq '.comments.[].body' | wc -l)
 
-#           if [ "$file_content_length" -ge "$issue_content_length" ]; then
-#             gh issue close "${{ github.event.issue.number }}"
-#           else
-#             gh issue edit "${{ github.event.issue.number }}" --remove-label 'done'
-#           fi
-#         shell: sh
-#         env:
-#           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          if [ "$file_content_length" -ge "$issue_content_length" ]; then
+            gh issue close "${{ github.event.issue.number }}"
+          else
+            gh issue edit "${{ github.event.issue.number }}" --remove-label 'done'
+          fi
+        shell: sh
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
