--- a/.github/workflows/schedules.yml
+++ b/.github/workflows/schedules.yml
@@ -12,7 +12,8 @@ jobs:
 
       - name: "done"
         run: |
-          gh issue list | awk '{ print $1 }' | xargs -I {} gh issue edit {} --add-label 'done'
+          gh issue list | awk '{ print $1 }' | xargs -I {} sh -c 'sleep "$SLEEP_COUNT"; gh issue edit {} --add-label "done"'
         shell: sh
         env:
+          SLEEP_COUNT: 2
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
