--- a/.github/workflows/schedules.yml
+++ b/.github/workflows/schedules.yml
@@ -1,4 +1,4 @@
-name: Templates Closer
+name: test 3
 
 on:
   workflow_dispatch:
@@ -10,10 +10,12 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v2
 
-      - name: Add done label to open issues
+      - name: test 3
         run: |
-          gh issue list | awk '{ print $1 }' | xargs -I {} sh -c 'sleep "$SLEEP_COUNT"; gh issue edit {} --add-label "done"'
+          # https://gist.github.com/0penBrain/7be59a48aba778c955d992aa69e524c5
+          curl -I -k -H "Authorization: token $GH_TOKEN"                      \
+            "https://api.github.com/repos/noraworld/diary/commits?per_page=1" |
+            sed -n '/^[Ll]ink:/ s/.*"next".*page=\([0-9]*\).*"last".*/\1/p'
         shell: sh
         env:
-          SLEEP_COUNT: 2
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
