--- a/.github/workflows/schedules.yml
+++ b/.github/workflows/schedules.yml
@@ -13,7 +13,7 @@ jobs:
       - name: test 3
         run: |
           # https://gist.github.com/0penBrain/7be59a48aba778c955d992aa69e524c5
-          curl -I -k -H "Authorization: token $GH_TOKEN"                      \
+          curl -I -k -s -H "Authorization: token $GH_TOKEN"                      \
             "https://api.github.com/repos/noraworld/diary/commits?per_page=1" |
             sed -n '/^[Ll]ink:/ s/.*"next".*page=\([0-9]*\).*"last".*/\1/p'
         shell: sh
