--- a/.github/workflows/schedules.yml
+++ b/.github/workflows/schedules.yml
@@ -12,10 +12,11 @@ jobs:
 
       - name: test 3
         run: |
+          gh issue list | awk '{ print $1 }' | xargs -I {} sh -c 'gh issue edit {} --add-label "done"'
           # https://gist.github.com/0penBrain/7be59a48aba778c955d992aa69e524c5
-          curl -I -k -s -H "Authorization: token $GH_TOKEN"                      \
-            "https://api.github.com/repos/noraworld/diary/commits?per_page=1" |
-            sed -n '/^[Ll]ink:/ s/.*"next".*page=\([0-9]*\).*"last".*/\1/p'
+          #curl -I -k -s -H "Authorization: token $GH_TOKEN"                      \
+          #  "https://api.github.com/repos/noraworld/diary/commits?per_page=1" |
+          #  sed -n '/^[Ll]ink:/ s/.*"next".*page=\([0-9]*\).*"last".*/\1/p'
         shell: sh
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
