--- a/.github/workflows/4.yml
+++ b/.github/workflows/4.yml
@@ -10,4 +10,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Output ✅ if the label "foo" exists, otherwise output ❌
-        run: echo "${{ github.event.issue.labels }}"
+        run: echo "${{ toJson(github.event.issue.labels) }}"
