--- a/.github/workflows/issue-changer.yml
+++ b/.github/workflows/issue-changer.yml
@@ -16,16 +16,28 @@ jobs:
 
       - name: Create issues from templates
         run: |
+          ISSUE_TITLE_LIST=$(gh issue list --repo "noraworld/to-do" --json title --jq .[].title)
+
           for issue_template in .github/ISSUE_TEMPLATE/*; do
-            gh issue create                                              \
-              --title "$(grep "title: " "$issue_template"                |
-                         sed -e 's/^title: //g'                          |
-                         sed -e "s/[\"\']//g"                            |
-                         sed -e "s/\[{{DATE}}\]/$(date '+%Y-%m-%d')/g")" \
-              --body "$(sed -e '/^---$/,/^---$/d' "$issue_template")"    \
-              --assignee "$(grep "assignees: " "$issue_template"         |
-                            sed -e 's/^assignees: //g'                   |
-                            sed -e "s/[\"\']//g")"
+            title=$(grep "title: " "$issue_template"               |
+                    sed -e 's/^title: //g'                         |
+                    sed -e "s/[\"\']//g"                           |
+                    sed -e "s/\[{{DATE}}\]/$(date '+%Y-%m-%d')/g")
+
+            if [ "$(echo "$ISSUE_TITLE_LIST" | grep -c "$title")" -ne 0 ]; then
+              continue
+            fi
+
+            body=$(sed -e '/^---$/,/^---$/d' "$issue_template")
+
+            assignee=$(grep "assignees: " "$issue_template" |
+                       sed -e 's/^assignees: //g'           |
+                       sed -e "s/[\"\']//g")
+
+            url=$(gh issue create           \
+                    --title "$title"        \
+                    --body "$body"          \
+                    --assignee "$assignee")
           done
         shell: sh
         env:
