Add special variables for with_header

--- a/action.yml
+++ b/action.yml
@@ -118,6 +118,8 @@ runs:
         ISSUE_NUMBER: ${{ github.event.issue.number }}
         ISSUE_TITLE: ${{ github.event.issue.title }}
         ISSUE_BODY: ${{ github.event.issue.body }}
+        ISSUE_ASSIGNEES: ${{ toJson(github.event.issue.assignees.*.login) }}
+        ISSUE_LABELS: ${{ toJson(github.event.issue.labels.*.name) }}
         ISSUE_URL: ${{ github.event.issue.html_url }}
         ISSUE_CREATED_AT: ${{ github.event.issue.created_at }}
         GITHUB_ACTION_PATH: ${{ github.action_path }}
