--- a/.github/workflows/issue-recorder.yml
+++ b/.github/workflows/issue-recorder.yml
@@ -52,7 +52,8 @@ jobs:
           with_date: true
           timezone: Asia/Tokyo
           time_format: h:mm a · MMM d, yyyy (ZZZZ)
-          with_header: "---\r\nid: ${{ github.event.issue.number }}\r\ntitle: \"${{ github.event.issue.title }}\"\r\nassignees: ${{ toJson(github.event.issue.assignees.*.login) }}\r\nlabels: ${{ toJson(github.event.issue.labels.*.name) }}\r\ncreated_at: \"${{ github.event.issue.created_at }}\"\r\n---"
+          # with_header: "---\r\nid: ${{ github.event.issue.number }}\r\ntitle: \"${{ github.event.issue.title }}\"\r\nassignees: ${{ toJson(github.event.issue.assignees.*.login) }}\r\nlabels: ${{ toJson(github.event.issue.labels.*.name) }}\r\ncreated_at: \"${{ github.event.issue.created_at }}\"\r\n---"
+          with_header: "---\r\nid: <NUMBER>\r\ntitle: <TITLE>\r\nassignees: <ASSIGNEES>\r\nlabels: <LABELS>\r\ncreated_at: <CREATED_AT>\r\n---"
           with_title: true
           custom_title: ${{ env.TITLE }}
           # with_quote: issue
