Use reusing workflows
https://docs.github.com/en/actions/using-workflows/reusing-workflows

--- a/.github/workflows/issue-changer.yml
+++ b/.github/workflows/issue-changer.yml
@@ -4,8 +4,11 @@ name: Templates Creator
 #   schedule:
 #     - cron: '0 22 * * *'
 
+# on:
+#   workflow_dispatch:
+
 on:
-  workflow_dispatch:
+  workflow_call:
 
 jobs:
   build:
