--- a/.github/workflows/issue-changer.yml
+++ b/.github/workflows/issue-changer.yml
@@ -9,6 +9,9 @@ name: Templates Creator
 
 on:
   workflow_call:
+    secrets:
+      token:
+        required: true
 
 jobs:
   build:
@@ -45,4 +48,4 @@ jobs:
           done
         shell: sh
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GH_TOKEN: ${{ secrets.token }}
