--- a/.github/workflows/5.yml
+++ b/.github/workflows/5.yml
@@ -6,9 +6,13 @@ on:
 jobs:
   call-workflow1:
     uses: noraworld/github-actions-sandbox/.github/workflows/schedules.yml@main
+    secrets:
+      token: ${{ secrets.GH_TOKEN }}
 
   call-workflow2:
     uses: noraworld/github-actions-sandbox/.github/workflows/issue-changer.yml@main
+    secrets:
+      token: ${{ secrets.GH_TOKEN }}
 
   # call-workflow-passing-data:
   #   permissions:
