--- a/.github/workflows/schedules.yml
+++ b/.github/workflows/schedules.yml
@@ -5,6 +5,9 @@ name: test 3
 
 on:
   workflow_call:
+    secrets:
+      token:
+        required: true
 
 jobs:
   build:
@@ -22,4 +25,4 @@ jobs:
           #  sed -n '/^[Ll]ink:/ s/.*"next".*page=\([0-9]*\).*"last".*/\1/p'
         shell: sh
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GH_TOKEN: ${{ secrets.token }}
