restore workflow_dispatch

--- a/.github/workflows/issue-changer.yml
+++ b/.github/workflows/issue-changer.yml
@@ -4,8 +4,8 @@ name: Templates Creator
 #   schedule:
 #     - cron: '0 22 * * *'
 
-# on:
-#   workflow_dispatch:
+on:
+  workflow_dispatch:
 
 on:
   workflow_call:
