--- a/.github/workflows/issue-changer.yml
+++ b/.github/workflows/issue-changer.yml
@@ -4,8 +4,10 @@ name: Templates Creator
 #   schedule:
 #     - cron: '0 22 * * *'
 
+# on:
+#   workflow_dispatch:
+
 on:
-  workflow_dispatch:
   workflow_call:
     secrets:
       token:
