--- a/.github/workflows/issue-changer.yml
+++ b/.github/workflows/issue-changer.yml
@@ -53,4 +53,4 @@ jobs:
           done
         shell: sh
         env:
-          GH_TOKEN: ${{ secrets.token }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
