--- a/action.yml
+++ b/action.yml
@@ -1,47 +1,47 @@
-name: Issue Recorder
-description: Save all comments on an issue to a file in your repository
+name: Social Media Recorder
+description: transfer
 author: noraworld
-branding:
-  icon: circle
-  color: purple
+# branding:
+#   icon: circle
+#   color: purple
 
 inputs:
-  mode:
-    description: Specify where to save the issues
-    required: false
-    default: file
-  filepath:
-    description: Specify the filename to be created or modified
-    required: false
-    default: default
-  committer_name:
-    description: This value will be used for git commit
-    required: false
-    default: GitHub Actions
-  committer_email:
-    description: This value will be used for git commit
-    required: false
-    default: actions@github.com
-  overwrite_when_modified:
-    description: When the file already exists, the content will be replaced with a new one
-    required: false
-    default: ""
-  extra_text_when_modified:
-    description: When the file already exists, this string will be added before the content
-    required: false
-    default: "# From issues"
-  notification_comment:
-    description: Specify the comment content to leave after saving to a file
-    required: false
-    default: ""
-  target_file_repo:
-    description: Select a repository with a username whose file you want to commit
-    required: false
-    default: ""
-  title_prefix_for_file:
-    description: Specify additional letters or emojis
-    required: false
-    default: ""
+  # mode:
+  #   description: Specify where to save the issues
+  #   required: false
+  #   default: file
+  # filepath:
+  #   description: Specify the filename to be created or modified
+  #   required: false
+  #   default: default
+  # committer_name:
+  #   description: This value will be used for git commit
+  #   required: false
+  #   default: GitHub Actions
+  # committer_email:
+  #   description: This value will be used for git commit
+  #   required: false
+  #   default: actions@github.com
+  # overwrite_when_modified:
+  #   description: When the file already exists, the content will be replaced with a new one
+  #   required: false
+  #   default: ""
+  # extra_text_when_modified:
+  #   description: When the file already exists, this string will be added before the content
+  #   required: false
+  #   default: "# From issues"
+  # notification_comment:
+  #   description: Specify the comment content to leave after saving to a file
+  #   required: false
+  #   default: ""
+  # target_file_repo:
+  #   description: Select a repository with a username whose file you want to commit
+  #   required: false
+  #   default: ""
+  # title_prefix_for_file:
+  #   description: Specify additional letters or emojis
+  #   required: false
+  #   default: ""
   target_issue_repo:
     description: Select a repository with a username whose issue you want to transfer
     required: false
@@ -50,50 +50,50 @@ inputs:
     description: Select an issue number
     required: false
     default: ""
-  fold_threshold:
-    description: Specify the threshold to fold
-    required: false
-    default: infinity
-  fold_summary:
-    description: Specify a summary string when an issue is folded
-    required: false
-    default: ""
-  title_prefix_for_issue:
-    description: Specify additional letters or emojis
-    required: false
-    default: ""
-  with_date:
-    description: Whether to include the date and time
-    required: false
-    default: ""
-  timezone:
-    description: Your timezone
-    required: false
-    default: Etc/GMT
-  time_format:
-    description: Time format
-    required: false
-    default: MMM d, yyyy, h:mm a ZZZZ
-  with_header:
-    description: Prepend a header content at the beginning of a file
-    required: false
-    default: ""
-  with_title:
-    description: Add an issue title
-    required: false
-    default: ""
-  custom_title:
-    description: Use a custom title given here instead of the original issue title
-    required: false
-    default: ""
-  with_quote:
-    description: Whether to encompass the whole content with a quote
-    required: false
-    default: ""
-  skip_body:
-    description: Whether to skip the body of an issue
-    required: false
-    default: ""
+  # fold_threshold:
+  #   description: Specify the threshold to fold
+  #   required: false
+  #   default: infinity
+  # fold_summary:
+  #   description: Specify a summary string when an issue is folded
+  #   required: false
+  #   default: ""
+  # title_prefix_for_issue:
+  #   description: Specify additional letters or emojis
+  #   required: false
+  #   default: ""
+  # with_date:
+  #   description: Whether to include the date and time
+  #   required: false
+  #   default: ""
+  # timezone:
+  #   description: Your timezone
+  #   required: false
+  #   default: Etc/GMT
+  # time_format:
+  #   description: Time format
+  #   required: false
+  #   default: MMM d, yyyy, h:mm a ZZZZ
+  # with_header:
+  #   description: Prepend a header content at the beginning of a file
+  #   required: false
+  #   default: ""
+  # with_title:
+  #   description: Add an issue title
+  #   required: false
+  #   default: ""
+  # custom_title:
+  #   description: Use a custom title given here instead of the original issue title
+  #   required: false
+  #   default: ""
+  # with_quote:
+  #   description: Whether to encompass the whole content with a quote
+  #   required: false
+  #   default: ""
+  # skip_body:
+  #   description: Whether to skip the body of an issue
+  #   required: false
+  #   default: ""
   personal_access_token:
     description: Specify your personal access token name stored in your repository
     required: false
@@ -110,39 +110,39 @@ runs:
       with:
         node-version: '16'
 
-    - name: Track issues
+    - name: transfer
       run: node $GITHUB_ACTION_PATH/app.js
       shell: sh
       env:
         GITHUB_TOKEN: ${{ github.token }}
         ISSUE_NUMBER: ${{ github.event.issue.number }}
-        ISSUE_TITLE: ${{ github.event.issue.title }}
-        ISSUE_BODY: ${{ github.event.issue.body }}
-        ISSUE_ASSIGNEES: ${{ toJson(github.event.issue.assignees.*.login) }}
-        ISSUE_LABELS: ${{ toJson(github.event.issue.labels.*.name) }}
-        ISSUE_URL: ${{ github.event.issue.html_url }}
-        ISSUE_CREATED_AT: ${{ github.event.issue.created_at }}
+        # ISSUE_TITLE: ${{ github.event.issue.title }}
+        # ISSUE_BODY: ${{ github.event.issue.body }}
+        # ISSUE_ASSIGNEES: ${{ toJson(github.event.issue.assignees.*.login) }}
+        # ISSUE_LABELS: ${{ toJson(github.event.issue.labels.*.name) }}
+        # ISSUE_URL: ${{ github.event.issue.html_url }}
+        # ISSUE_CREATED_AT: ${{ github.event.issue.created_at }}
         GITHUB_ACTION_PATH: ${{ github.action_path }}
-        MODE: ${{ inputs.mode }}
-        FILEPATH: ${{ inputs.filepath }}
-        COMMITTER_NAME: ${{ inputs.committer_name }}
-        COMMITTER_EMAIL: ${{ inputs.committer_email }}
-        OVERWRITE_WHEN_MODIFIED: ${{ inputs.overwrite_when_modified }}
-        EXTRA_TEXT_WHEN_MODIFIED: ${{ inputs.extra_text_when_modified }}
-        NOTIFICATION_COMMENT: ${{ inputs.notification_comment }}
-        TARGET_FILE_REPO: ${{ inputs.TARGET_FILE_REPO }}
-        TITLE_PREFIX_FOR_FILE: ${{ inputs.title_prefix_for_file }}
+        # MODE: ${{ inputs.mode }}
+        # FILEPATH: ${{ inputs.filepath }}
+        # COMMITTER_NAME: ${{ inputs.committer_name }}
+        # COMMITTER_EMAIL: ${{ inputs.committer_email }}
+        # OVERWRITE_WHEN_MODIFIED: ${{ inputs.overwrite_when_modified }}
+        # EXTRA_TEXT_WHEN_MODIFIED: ${{ inputs.extra_text_when_modified }}
+        # NOTIFICATION_COMMENT: ${{ inputs.notification_comment }}
+        # TARGET_FILE_REPO: ${{ inputs.TARGET_FILE_REPO }}
+        # TITLE_PREFIX_FOR_FILE: ${{ inputs.title_prefix_for_file }}
         TARGET_ISSUE_REPO: ${{ inputs.target_issue_repo }}
         TARGET_ISSUE_NUMBER: ${{ inputs.target_issue_number }}
-        FOLD_THRESHOLD: ${{ inputs.fold_threshold }}
-        FOLD_SUMMARY: ${{ inputs.fold_summary }}
-        TITLE_PREFIX_FOR_ISSUE: ${{ inputs.title_prefix_for_issue }}
-        WITH_DATE: ${{ inputs.with_date }}
-        TIMEZONE: ${{ inputs.timezone }}
-        TIME_FORMAT: ${{ inputs.time_format }}
-        WITH_HEADER: ${{ inputs.with_header }}
-        WITH_TITLE: ${{ inputs.with_title }}
-        CUSTOM_TITLE: ${{ inputs.custom_title }}
-        WITH_QUOTE: ${{ inputs.with_quote }}
-        SKIP_BODY: ${{ inputs.skip_body }}
+        # FOLD_THRESHOLD: ${{ inputs.fold_threshold }}
+        # FOLD_SUMMARY: ${{ inputs.fold_summary }}
+        # TITLE_PREFIX_FOR_ISSUE: ${{ inputs.title_prefix_for_issue }}
+        # WITH_DATE: ${{ inputs.with_date }}
+        # TIMEZONE: ${{ inputs.timezone }}
+        # TIME_FORMAT: ${{ inputs.time_format }}
+        # WITH_HEADER: ${{ inputs.with_header }}
+        # WITH_TITLE: ${{ inputs.with_title }}
+        # CUSTOM_TITLE: ${{ inputs.custom_title }}
+        # WITH_QUOTE: ${{ inputs.with_quote }}
+        # SKIP_BODY: ${{ inputs.skip_body }}
         PERSONAL_ACCESS_TOKEN: ${{ inputs.personal_access_token }}
