Add Gemfile & Gemfile.lock

--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -31,8 +31,8 @@ jobs:
           ruby-version: 2.7.8
           bundler-cache: true
 
-      - name: Install dependencies
-        run: bundle install
+      # - name: Install dependencies
+      #   run: bundle install
 
       - name: Build Jekyll site
         run: bundle exec jekyll build
