--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: Github Actions Sandbox
 url: "https://noraworld.github.io"
 baseurl: "/github-actions-sandbox/"
+permalink: /:title
 
 theme: minima
 markdown: CommonMark
