--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Github Actions Sandbox
 url: "https://noraworld.github.io"
 baseurl: "/github-actions-sandbox"
-permalink: /:title/
+permalink: /:title
 
 theme: minima
 markdown: CommonMark
