--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -2,6 +2,15 @@ name: Build and Deploy Jekyll with GitHub Actions
 
 on:
   workflow_call:
+    inputs:
+      use_ruby_version:
+        required: false
+        default: false
+        type: string
+      use_gemfile:
+        required: false
+        default: false
+        type: string
 
 permissions:
   contents: read
@@ -28,8 +37,17 @@ jobs:
 
       - name: Set env
         run: |
-          echo "RUBY_VERSION=$(cat tmp/.ruby-version)" >> $GITHUB_ENV
-          echo "BUNDLE_GEMFILE=$(realpath tmp/Gemfile)" >> $GITHUB_ENV
+          if [ "${{ inputs.use_ruby_version }}" = "true" ]; then
+            echo "RUBY_VERSION=$(cat .ruby-version)" >> $GITHUB_ENV
+          else
+            echo "RUBY_VERSION=$(cat tmp/.ruby-version)" >> $GITHUB_ENV
+          fi
+
+          if [ "${{ inputs.use_gemfile }}" = "true" ]; then
+            echo "BUNDLE_GEMFILE=$(realpath Gemfile)" >> $GITHUB_ENV
+          else
+            echo "BUNDLE_GEMFILE=$(realpath tmp/Gemfile)" >> $GITHUB_ENV
+          fi
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
