--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - if: ${{ !(inputs.use_ruby_version == "true" && inputs.use_gemfile == "true") }}
+      - if: ${{ !(inputs.use_ruby_version == 'true' && inputs.use_gemfile == 'true') }}
         name: Check out workflow repo
         uses: actions/checkout@v4
         with:
