--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,5 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  jekyll-gh-pages:
-    uses: noraworld/github-actions-sandbox@main
+  build:
+    steps:
+      - name: action
+        uses: noraworld/github-actions-sandbox@main
