--- a/action.yml
+++ b/action.yml
@@ -6,11 +6,11 @@ inputs:
   use_ruby_version:
     required: false
     default: false
-    type: string
+    # type: string
   use_gemfile:
     required: false
     default: false
-    type: string
+    # type: string
 
 permissions:
   contents: read
