--- a/action.yml
+++ b/action.yml
@@ -28,8 +28,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - if: ${{ !(inputs.use_ruby_version == 'true' && inputs.use_gemfile == 'true') }}
-        name: Check out workflow repo
+      # - if: ${{ !(inputs.use_ruby_version == 'true' && inputs.use_gemfile == 'true') }}
+      - name: Check out workflow repo
         uses: actions/checkout@v4
         with:
           repository: noraworld/github-actions-sandbox
@@ -38,17 +38,19 @@ jobs:
 
       - name: Set env
         run: |
-          if [ "${{ inputs.use_ruby_version }}" = "true" ]; then
-            echo "RUBY_VERSION=$(cat .ruby-version)" >> $GITHUB_ENV
-          else
-            echo "RUBY_VERSION=$(cat tmp/.ruby-version)" >> $GITHUB_ENV
-          fi
+          # if [ "${{ inputs.use_ruby_version }}" = "true" ]; then
+          #   echo "RUBY_VERSION=$(cat .ruby-version)" >> $GITHUB_ENV
+          # else
+          #   echo "RUBY_VERSION=$(cat tmp/.ruby-version)" >> $GITHUB_ENV
+          # fi
+          echo "RUBY_VERSION=$(cat tmp/.ruby-version)" >> $GITHUB_ENV
 
-          if [ "${{ inputs.use_gemfile }}" = "true" ]; then
-            echo "BUNDLE_GEMFILE=$(realpath Gemfile)" >> $GITHUB_ENV
-          else
-            echo "BUNDLE_GEMFILE=$(realpath tmp/Gemfile)" >> $GITHUB_ENV
-          fi
+          # if [ "${{ inputs.use_gemfile }}" = "true" ]; then
+          #   echo "BUNDLE_GEMFILE=$(realpath Gemfile)" >> $GITHUB_ENV
+          # else
+          #   echo "BUNDLE_GEMFILE=$(realpath tmp/Gemfile)" >> $GITHUB_ENV
+          # fi
+          echo "BUNDLE_GEMFILE=$(realpath tmp/Gemfile)" >> $GITHUB_ENV
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
@@ -56,7 +58,8 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: ${{ env.RUBY_VERSION }}
+          # ruby-version: ${{ env.RUBY_VERSION }}
+          ruby-version: 2.7.8
           bundler-cache: true
           rubygems: latest
 
@@ -66,13 +69,13 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
 
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+  # deploy:
+  #   needs: build
+  #   runs-on: ubuntu-latest
+  #   environment:
+  #     name: github-pages
+  #     url: ${{ steps.deployment.outputs.page_url }}
+  #   steps:
+  #     - name: Deploy to GitHub Pages
+  #       id: deployment
+  #       uses: actions/deploy-pages@v4
