--- a/action.yml
+++ b/action.yml
@@ -71,6 +71,14 @@ runs:
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v3
 
+    # environment:
+    #   name: github-pages
+    #   url: ${{ steps.deployment.outputs.page_url }}
+
+    - name: Deploy to GitHub Pages
+      id: deployment
+      uses: actions/deploy-pages@v4
+
   # deploy:
   #   needs: build
   #   runs-on: ubuntu-latest
